<resources>
    <string name="app_name" translatable="false">Nasa</string>
    <string name="photo_of_the_day_stub" translatable="false">Photo of the day</string>
    <string name="search_wiki">Find on Wikipedia</string>
    <string name="wiki_helper_text">Look up the term on wikipedia</string>
    <string name="asteroid">Asteroid</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="errorOnServer">Server error, please try again later</string>
    <string name="codeError">Error code</string>
    <string name="error">Error</string>
    <string name="reboot">Reload</string>
    <string name="before_yesterday">Позавчера</string>
    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="day">Day</string>
    <string name="mars">Mars</string>
    <string name="moon">Moon</string>
    <string name="home">Home</string>
    <string name="weather">Weather</string>
    <string name="name_asteroid">Name of the asteroid</string>
    <string name="select_date">Select a date</string>
    <string name="earth">Earth</string>

    <string name="large_text" translatable="false">Луна — единственный естественный спутник Земли. Самый близкий к Солнцу спутник планеты, так как у ближайших к Солнцу планет (Меркурия и Венеры) их нет. Второй по яркости объект на земном небосводе после Солнца и пятый по величине естественный спутник планеты Солнечной системы. Среднее расстояние между центрами Земли и Луны — 384 467 км (0,00257 а.е., ~30 диаметров Земли).Видимая звёздная величина полной Луны на земном небе — −12,71m. Освещённость, создаваемая полной Луной возле поверхности Земли при ясной погоде, составляет 0,25—1 лк.Луна появилась около 4,51 млрд лет назад, немного позже Земли. Наиболее популярна гипотеза о том, что Луна сформировалась из осколков, оставшихся после «Гигантского столкновения» Земли и Тейи — планеты, схожей по размерам с Марсом.Луна является единственным внеземным астрономическим объектом, на котором побывал человек.</string>
    <string name="sub_title_bar" translatable="false">Единственный естественный спутник Земли</string>
    <string name="asteroids" translatable="false">Астероиды</string>
    <string name="more">More</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
</resources>