<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/navigation_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_menu"
            app:showAsAction="always"/>
        <item
            android:id="@+id/navigation_favourite"
            android:title="@string/favourite"
            android:icon="@drawable/ic_favourite_menu"
            app:showAsAction="always" />

        <item
            android:id="@+id/navigation_weather"
            android:title="@string/weather"
            android:icon="@drawable/ic_weather_menu"
            app:showAsAction="always"/>
        <item
            android:id="@+id/navigation_settings"
            android:icon="@drawable/ic_setting_menu"
            android:title="@string/settings"
            app:showAsAction="always" />
    </group>
</menu>